# fastapi-starter

my-app/: Dockerfile  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml
my-app/.github/workflows/: test.yaml
my-app/backend/: Dockerfile  pyproject.toml
my-app/backend/app/core/: config.py
my-app/frontend/: Dockerfile  package.json
my-app/frontend/public/: index.html
my-app/frontend/src/: App.tsx
my-app/frontend/src/components/: Auth.tsx
{{cookiecutter.project_slug}}/: .env
