[tool.poetry]
name = "my-app-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
uvicorn = "^0.32.1"
pydantic = "^2.10.6"
requests = "^2.32.3"
alembic = "^1.15.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
SQLAlchemy = "^2.0.39"
gunicorn = "^23.0.0"
fastapi-users = { extras = ["sqlalchemy"], version = "^14.0.1" }
email-validator = "^2.2.0"
pydantic-settings = "^2.8.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
ipython = "^8.30.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.ruff]
target-version = "py313"
line-length = 88

select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP", # pyupgrade
  #    "I",  # isort - disabled for now
]
ignore = [
  "B008", # do not perform function calls in argument defaults
  "F401", # imported but unused, too annoyiong for my liking
]
